# projetoPI3

./: .pdm-python  db.sqlite3  pyproject.toml
alunos/: admin.py  models.py  serializers.py  views.py
alunos/migrations/: 0001_initial.py  0002_rename_precouni_itens_preco_unitario_and_more.py
config/: settings.py  urls.py
